# robot_arms

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ee_visualization.py  franka_test.py  kinova_test.py  kinova_test_rrmc.py  kinova_text.py  robot_data_replay.py
src/controllers/: simple_controller.py  tora.py
src/robot_arms/: __init__.py  arms.py
src/robot_arms/descriptions/urdf/franka/: fr3_franka_hand.urdf
src/robot_arms/descriptions/urdf/kinova/: kinova_arm.urdf  kinova_arm_origin.urdf
src/robot_arms/franka/: franka_basic.py
src/robot_arms/kinova/: kinova_basic.py  kinova_basic_origin.py  kinova_device_connection.py
src/robot_arms/solvers/: curobo_solver.py  curobo_solver_plan.py
src/solvers/: curobo_solver.py
src/tools/: ee_visualization.py
